# ai_evolution

./: .dockerignore  .env.example  .gitee-ci.yml  .gitignore  CHANGELOG.md  DOCUMENT_ANALYSIS.md  Dockerfile  Makefile  PROJECT_ASSESSMENT.md  README.md  TODO.md  __main__.py  iteration_tracking.json  openclaw.json  openclaw_kernel.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  update-check.json
brain/: attention.py  decision.py  memory.py  perception.py  test_core_modules.py  value.py
config/: compliance_rules.json  config.example.yaml  config.yaml  evolution_goals.yaml  gitee_cicd.yaml  github_cicd.yaml  security_rules.json
core/: skills.py
data/: compliance_stats.json  consciousness_test_report.json  near_3month_runtime_data.json  pip.conf
docs/: .doc_registry.json  AI_EXECUTION_OPTIMIZATION.md  AI可信输出标准化规则v1.0.md  Agent任务全流程标准化规范v1.0.md  BRAIN_ENHANCEMENTS_REPORT.md  BRAIN_MODULE_ASSESSMENT.md  Brain自主处理适配场景清单.md  CICD_PLATFORM_SWITCH.md  CI_CD_DEMAND_RESPONSE_SLA.md  CI_CD_FIX_REPORT.md  CI_CD_NEW_FEATURE_TUTORIAL.md  CI_CD_TROUBLESHOOTING_GUIDE.md  CI_CD_USER_MANUAL_V2.0.md  CI_CD_USE_SATISFACTION_SURVEY.md  COMPUTER_USE_AGENT.md  EMBEDDING_OPTIONS.md  FULL_CODE_AUDIT_REPORT.md  GITHUB_CICD_INTEGRATION.md  GITHUB_CICD_SECURITY.md  GITHUB_SECRETS_GUIDE.md  GITHUB_TOKEN_SETUP.md  MULTI_AGENT_GUIDE.md  P0优先级工具调用文档.md  PROJECT_ASSESSMENT_REPORT.md  PROJECT_EVALUATION.md  PROJECT_STRUCTURE.md  REPO_CONFIG.md  REPO_INTEGRATION.md  REPO_QUICKSTART.md  SSH_KEY_SETUP.md  Web Tools 使用说明.md  autonomous_iteration_standard_sop.md  brain_digital_twin_requirements.txt  cicd_assessment_report.md  cicd_pipeline_usage_guide.md  cicd_support_features_design.md  enhanced_hybrid_architecture.md  llm_call_analysis_report.md  llm_call_scene_statistics_report.md  security_test_framework_design.md  (+10 more)
identity/: device.json
reports/: agent_performance_analysis_report.md
scripts/: Dockerfile  analyze_llm_calls.py  ci-test.sh  demo_multi_agent.py  install-hooks.sh  pre-commit-security.sh  setup-git-token.sh  setup_chroma_cache.py  test_llm_ark.py  verify_structure.py  (+1 more)
(+219 files in other folders)
